<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pledge"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/nav_pledge" />
        <item
            android:id="@+id/nav_meals"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/nav_meals" />
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/nav_browse" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_gamepad_black_24dp"
            android:title="@string/nav_quiz"/>
    </group>

    <item android:title="@string/nav_title_information">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/nav_account" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
