<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/loading_icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="start">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_home"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:elevation="4dp"
            app:theme="@style/Toolbar" />

        <LinearLayout
            android:id="@+id/layout_account_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="start"
            android:weightSum="2">
        
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/image_account_user_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher_round"
                    android:contentDescription="@string/nav_header_content_pic" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/text_account_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="@string/nav_header_text_default"/>

                    <TextView
                        android:id="@+id/text_account_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/checkbox_account_permissions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_account_personalinfo"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_account_permissions"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_account_permissions"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColor="#FFF"/>

                <Button
                    android:id="@+id/button_account_data"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_account_remove"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColor="#FFF"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_drawer"/>

</android.support.v4.widget.DrawerLayout>