<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/loading_icon_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_home"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:elevation="4dp"
            app:theme="@style/Toolbar"/>

        <LinearLayout
            android:id="@+id/container_main_my_pledge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:text="blah"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:background="#FFFF"
                android:elevation="2dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textview_pledged_1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textview_my_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textview_pledged_2"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="#FFFF"
                    android:elevation="2dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/textview_equivalent_1"/>

                    <TextView
                        android:id="@+id/textview_total_vehicles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginBottom="10dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/textview_equivalent_2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:background="#FFFF"
                    android:elevation="2dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginBottom="10dp"
                        android:text="This is the same as growing"/>

                    <TextView
                        android:id="@+id/textview_total_saplings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginBottom="10dp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/textview_equivalent_3"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/vancouver_co2_total"
                android:background="#FFF"
                android:elevation="2dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Metro Vancouver Total Goes Here!"
                android:textAlignment="center"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="0.5">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_share_pledge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_share_pledge"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColor="#FFF"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_edit_pledge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_edit"
                    android:backgroundTint="#0000"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_main_no_pledge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|center_horizontal"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textview_no_pledge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/textview_no_pledge"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="top|center_horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_make_pledge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_text_make_pledge"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColor="#FFF"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_drawer"/>

</android.support.v4.widget.DrawerLayout>