<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        tools:context=".controller.activities.ResultsActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="5"
        android:background="#EEEE">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_home"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:elevation="4dp"
            app:theme="@style/Toolbar"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:padding="5dp"
            android:textAlignment="center"
            android:elevation="2dp"
            android:background="#FFFF"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/this_is_your_weekly"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart_results"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_weight="4"
            android:elevation="2dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/results_make_a_pledge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/make_a_pledge"
                android:textColor="#FFF" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:backgroundTint="#0000"
                android:text="@string/reset"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
    android:id="@+id/nav_view"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:layout_gravity="start"
    app:headerLayout="@layout/nav_header"
    app:menu="@menu/navigation_drawer"/>

</android.support.v4.widget.DrawerLayout>